Test logos and photos added

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                     <div class="social-links">
                         <a href="https://t.me/nellicrafts" target="_blank" class="social-link telegram">
                             <img src="assets/logos/telegram-icon.png" alt="Telegram">
-                            <span>@инста</span>
+                            <span>@nellicrafts</span>
                         </a>
-                        <a href="https://instagram.com/nellicrafts" target="_blank" class="social-link instagram">
+                        <a href="https://www.instagram.com/nelli.crafts" target="_blank" class="social-link instagram">
                             <img src="assets/logos/instagram-icon.png" alt="Instagram">
-                            <span>@телега</span>
+                            <span>nelli.crafts</span>
                         </a>
                     </div>
                 </div>
