Images added, text fixed

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nelli Crafts - Handcrafted Epoxy Jewelry with Armenian Flowers</title>
+    <title>Nelli Crafts</title>
+    <link rel="icon" type="image/png" href="assets/logos/logo_back.png">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -28,9 +31,9 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1 class="fade-in">Украшения с живыми цветами</h1>
-                <h2 class="fade-in-delay">Featuring Beautiful Armenian Flowers</h2>
-                <p class="fade-in-delay-2">Уникальные украшения ручной работы с частичкой природы</p>
+                <h1 class="fade-in">NELLI.CRAFTS</h1>
+                <h2 class="fade-in-delay">Украшения ручной работы, в которых живёт сама природа</h2>
+                <p class="fade-in-delay-2">В каждом изделии - настоящие цветы и травы, собранные и высушенные вручную</p>
                 <a href="#jewelry" class="cta-button fade-in-delay-3">Примеры работ</a>
             </div>
         </div>
@@ -42,8 +45,9 @@
             <h2 class="section-title slide-in">О бренде Nelli Crafts</h2>
             <div class="about-content">
                 <div class="about-text slide-in-left">
-                    <p>Привет! Меня зовут Нелли и я создаю украшения из высококачественной эпоксидной смолы и бережно засушенных цветов. Каждое изделие я изготавливаю вручную с любовью и вниманием к деталям, гарантируя каждому покупателю уникальное произведение искусства.</p>
-                    <p>Мои украшения сочетают в себе современные технологии работы с эпоксидной смолой и непреходящую красоту живых цветов, создавая одновременно современные и классические украшения.</p>
+                    <p>Привет! Меня зовут Нелли🌿</p>
+                    <p>И я очень люблю собирать цветы и травы. Их заключаю в смолу и делаю уникальные украшения - кулоны, серьги и броши, в которых живёт настоящий кусочек природы.</p>
+                    <p>Каждое изделие - ручная работа, в нём есть тепло, немного уюта и душа. Каждый цветок и листок собран и высушен вручную. Хочется, чтобы украшения не просто радовали глаз, а дарили настроение и эмоции.</p>
                 </div>
                 <div class="about-image slide-in-right">
                     <img src="assets/images/workshop.jpg" alt="Nelli working on jewelry" class="about-img">
@@ -59,23 +63,27 @@
             <div class="jewelry-grid">
                 <div class="jewelry-item fade-in-up">
                     <img src="assets/images/jewelry-1.jpg" alt="Epoxy necklace with flowers" class="jewelry-img">
-                    <h3>Floral Necklace</h3>
-                    <p>Elegant necklace featuring preserved Armenian flowers</p>
+                    <h3>Кулоны</h3>
                 </div>
                 <div class="jewelry-item fade-in-up">
                     <img src="assets/images/jewelry-2.jpg" alt="Epoxy earrings with flowers" class="jewelry-img">
-                    <h3>Сережки</h3>
-                    <p>Delicate earrings showcasing natural flower beauty</p>
+                    <h3>Серьги</h3>
                 </div>
                 <div class="jewelry-item fade-in-up">
                     <img src="assets/images/jewelry-3.jpg" alt="Epoxy bracelet with flowers" class="jewelry-img">
                     <h3>Браслеты</h3>
-                    <p>Charming bracelet with embedded flower petals</p>
                 </div>
                 <div class="jewelry-item fade-in-up">
                     <img src="assets/images/jewelry-4.jpg" alt="Epoxy ring with flowers" class="jewelry-img">
                     <h3>Кольца</h3>
-                    <p>Я делаю кольца из нержавеющей стали, а также серебряные</p>
+                </div>
+                <div class="jewelry-item fade-in-up">
+                    <img src="assets/images/jewelry-5.jpg" alt="Epoxy hair clips with flowers" class="jewelry-img">
+                    <h3>Заколки для волос</h3>
+                </div>
+                <div class="jewelry-item fade-in-up">
+                    <img src="assets/images/jewelry-6.jpg" alt="Epoxy sets with necklace and earrings with flowers" class="jewelry-img">
+                    <h3>Комплекты</h3>
                 </div>
             </div>
         </div>
@@ -111,19 +119,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="assets/logos/logo.png" alt="Nelli Crafts Logo">
-                    <span>Nelli Crafts</span>
-                </div>
-                <p>&copy; 2025 Nelli Crafts. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
 
     <script src="script.js"></script>
 </body>
