Smooth animation for contacts block

--- a/index.html
+++ b/index.html
@@ -92,29 +92,19 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title slide-in">Контакты</h2>
+            <h2 class="section-title slide-in">Как со мной связаться</h2>
             <div class="contact-content">
-                <div class="contact-info slide-in-left">
-                    <h3>Как со мной связаться</h3>
-                    <p>Подписывайтесь в социальных сетях, чтобы следить за актуальным ассортиментом и новостями.</p>
-                    <div class="social-links">
+                <div class="contact-info">
+<!--                    <h3>Как со мной связаться</h3>-->
+                    <p class="fade-in-up">Подписывайтесь в социальных сетях, чтобы следить за актуальным ассортиментом и новостями.</p>
+                    <div class="social-links fade-in-up">
                         <a href="https://t.me/nellicrafts" target="_blank" class="social-link telegram">
                             <img src="assets/logos/telegram-icon.png" alt="Telegram">
-                            <span>@nellicrafts</span>
                         </a>
                         <a href="https://www.instagram.com/nelli.crafts" target="_blank" class="social-link instagram">
                             <img src="assets/logos/instagram-icon.png" alt="Instagram">
-                            <span>nelli.crafts</span>
                         </a>
                     </div>
-                </div>
-                <div class="contact-form slide-in-right">
-                    <form class="contact-form-element">
-                        <input type="text" placeholder="Ваше имя" required>
-                        <input type="email" placeholder="Ваш Email" required>
-                        <textarea placeholder="Сообщение" rows="5" required></textarea>
-                        <button type="submit" class="submit-btn">Отправить письмо</button>
-                    </form>
                 </div>
             </div>
         </div>
