--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="hero-text">
                 <h1 class="fade-in">NELLI.CRAFTS</h1>
                 <h2 class="fade-in-delay">Украшения ручной работы, в которых живёт сама природа</h2>
-                <p class="fade-in-delay-2">В каждом изделии - настоящие цветы и травы, собранные и высушенные вручную</p>
+                <p class="fade-in-delay-2">В каждом изделии — настоящие цветы и травы, собранные и высушенные вручную</p>
                 <a href="#jewelry" class="cta-button fade-in-delay-3">Примеры работ</a>
             </div>
         </div>
@@ -46,7 +46,7 @@
             <div class="about-content">
                 <div class="about-text slide-in-left">
                     <p>Привет! Меня зовут Нелли🌿</p>
-                    <p>И я очень люблю собирать цветы и травы. Их заключаю в смолу и делаю уникальные украшения - кулоны, серьги и броши, в которых живёт настоящий кусочек природы.</p>
+                    <p>И я очень люблю собирать цветы и травы. Их заключаю в смолу и делаю уникальные украшения — кулоны, серьги и броши, в которых живёт настоящий кусочек природы.</p>
                     <p>Каждое изделие - ручная работа, в нём есть тепло, немного уюта и душа. Каждый цветок и листок собран и высушен вручную. Хочется, чтобы украшения не просто радовали глаз, а дарили настроение и эмоции.</p>
                 </div>
                 <div class="about-image slide-in-right">
@@ -95,7 +95,6 @@
             <h2 class="section-title slide-in">Как со мной связаться</h2>
             <div class="contact-content">
                 <div class="contact-info">
-<!--                    <h3>Как со мной связаться</h3>-->
                     <p class="fade-in-up">Подписывайтесь в социальных сетях, чтобы следить за актуальным ассортиментом и новостями.</p>
                     <div class="social-links fade-in-up">
                         <a href="https://t.me/nellicrafts" target="_blank" class="social-link telegram">
